--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,10 @@
 		<java.version>17</java.version>
 
 		<!-- SonarCloud Configuration -->
-		<sonar.organization>darryl1975</sonar.organization>
+		<sonar.organization>kinleyjigs</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.coverage.jacoco.xmlReportPaths>
-			../app-it/target/site/jacoco-aggregate/jacoco.xml
+			target/site/jacoco/jacoco.xml
 		</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
