Fix SonarCloud project key mismatch and add branch configuration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 # sonar-project.properties
-sonar.projectKey=kinleyjigs_cicd-demo
+sonar.projectKey=Kinleyjigs_AS2025_SWE302_02230313_practical4a
 sonar.organization=kinleyjigs
 
 # Metadata
-sonar.projectName=CICD Demo
+sonar.projectName=AS2025 SWE302 02230313 Practical4a
 sonar.projectVersion=1.0
 
 # Path to source code
