--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -37,4 +37,6 @@ jobs:
           mvn sonar:sonar \
             -Dsonar.projectKey=Kinleyjigs_AS2025_SWE302_02230313_practical4a \
             -Dsonar.organization=kinleyjigs \
-            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.projectName="AS2025 SWE302 02230313 Practical4a" \
+            -Dsonar.branch.name=main
